# fedora

./: .gitignore  CITATION.cff  README.md  SUMMARY.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: details.md  walkthrough.md
examples/audiology/: audiology.pybnf
examples/car-evaluation/: car-evaluation.pybnf  car-evaluation.yml  main.py
examples/car-evaluation/car-evaluation-results/runs/run_42/: best.json  parameters.json  progress_report.csv
examples/custom-mnist/: custom-mnist.yml  main.py
examples/mnist/: main.py  mnist.pybnf  mnist.yml
examples/strings/: main.py  strings.pybnf  strings.yml
examples/strings/strings-results/runs/run_105/: best.json  parameters.json  progress_report.csv
examples/symreg/: main.py  symreg.pybnf  symreg.yml
fedora/core/: __init__.py  engine.py
fedora/core/utilities/: lib.py  logger.py
fedora/sge/: engine.py  grammar.py  logger.py
fedora/sge/operators/: mutation.py  recombination.py
fedora/sge/utilities/: ordered_set.py  protected_math.py
