[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedora-framework"
version = "1.0.0"
authors = [
  { name="Miguel Rabuge", email="rabuge@dei.uc.pt" },
  { name="Nuno Lourenço", email="naml@dei.uc.pt" },
]
description = "The Fedora framework package"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  'numpy>=1.23.5',
  'pandas>=2.0.0',
  'PyYAML>=6.0',
  'PyYAML>=6.0.1',
  'scikit_learn>=1.2.2',
  'SQLAlchemy>=2.0.22',
  'tqdm>=4.65.0',
]


[project.urls]
"Homepage" = "https://github.com/miguelrabuge/fedora"
"Bug Tracker" = "https://github.com/miguelrabuge/fedora/issues"


[tool.hatch.build]
exclude = [
  "/.github",
  "/examples",
  "/images",
  "/docs"
]